# python-mate-desktop

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  wscript
atril/: Makefile.am  atril.defs  atril.override  atrilmodule.c  wscript
bzrplugins/: gnulog.py
cajaburn/: nb_module.c  nb_track.c
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
docs/: Makefile.am
examples/: wnck_example.py
matedesktop/: _matedesktopmodule.c
matewnck/: Makefile.am  matewnck.defs  matewnck.override  matewnckmodule.c  wscript
tests/: common.py  ltihooks.py
